Fix parameters container's  flowing out of the viewport at the bottom

--- a/index.css
+++ b/index.css
@@ -87,16 +87,16 @@ body {
 
 .game-parameters-container {
     padding: 5px;
-    /* it is the container width - 2*left - 2*border width - 2*padding */
-    width: calc(100% - 4vw - 2px - 10px);
-    /* it is the container height - top - 2*border - 2vw of the bottom margin */
-    max-height: calc(100% - 130px - 4px - 2vw);
+    /* it is the container width - left - right - 2*border width - 2*padding */
+    width: calc(100% - 4vw - 4vw - 2px - 10px);
+    /* it is the container height - top - 2*border - 2*padding - the bottom gap (the same as left and right) */
+    max-height: calc(100% - 130px - 2px - 10px - 4vw);
 
     z-index: 1;
     position: absolute;
     /* it is the container (i.e. .game-menu) height + 2*padding */
     top: calc(120px + 10px);
-    left: 2vw;
+    left: 4vw;
     overflow: auto;
 
     display: grid;
